[project]
name = "algoritmoscifrado"
version = "0.1.0"
description = "Algoritmos de cifrado Vigenère y Transposición Simple"
authors = [{ name = "Alejandro riveros"}]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
